Read a quote in a tag's PHP only as the start of a literal
Two complete literals in one tag could also be paired shifted by one quote: the
closing quote of the first read as an opening one and the opening quote of the
second as its closing one. The character class the run of PHP is made of took a
quote as an ordinary character as well, so both pairings were possible, and the
shifted one spans everything in between - newlines and braces included - which
makes it the longer match. The brace it swallowed was never counted, so the tag
ended at the first brace of the block that brace had opened:

    {php
        $a = ['k' => 1];
        foreach ($x as $i) {
            $b = ['k' => 2];
        }
    }

closed at the brace closing the loop, and the rest of the file was read as HTML.

Leaving quotes out of that class means a quote can only ever start a literal.
The state that counts a braced group had the same class and the same flaw one
level down, where a brace inside a literal was counted along with the code
around it; both now take a literal whole, which is the shape the top lexer's
macro body already had.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DpKDGuJwoVUAZVKh6wWMco